tests/snapshots/examples_fixtures/type_system__failing__06_runtime_float_string_return.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/06_runtime_float_string_return.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E055]: TYPE MISMATCH

Expected Float, got String.

  --> examples/type_system/failing/06_runtime_float_string_return.flx:2:5
  |
2 |     "slow"
  |     ^^^^^^
  |     ------ return expression type is known at compile time

Help:
  return expression type does not match the declared return type
== stdout ==
<not executed>
